# todolist-rust-next-monorepo

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  commitlint.config.ts  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.husky/: pre-commit
apps/api/: .env.example  Cargo.toml  Dockerfile  package.json
apps/api/docs/: structure_api.md
apps/api/docs/api/: todo-endpoints-no-auth.md
apps/api/docs/postman/: todo.local.postman_environment.json  todo.postman_collection.json
apps/api/migration/: Cargo.toml
apps/api/migration/src/: lib.rs  m20260217_000001_init_schema.rs  main.rs
apps/api/src/: app_state.rs  main.rs
apps/api/src/common/: error.rs  mod.rs
apps/api/src/config/: database.rs  mod.rs
apps/api/src/infrastructure/: mod.rs
apps/api/src/infrastructure/db/: connection.rs  mod.rs
apps/api/src/modules/: mod.rs
apps/api/src/modules/todo/: dto.rs  entity.rs  handler.rs  mod.rs  repository.rs  service.rs
apps/web/: .env.example  .lintstagedrc.json  Dockerfile  eslint.config.mjs  package.json  tsconfig.tsbuildinfo
apps/web/docs/: structure-web.md
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/providers/: query-provider.tsx
docs/: docker-guide.md  husky-explanation.md  setup-local.md
